services/Passit/20-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: passit
  labels:
    name: passit
