services/Passit/50-passit.kae.yml
kind: Service
apiVersion: v1
metadata:
  namespace: passit
  name: passit
spec:
  selector:
    app: passit
    component: passit
  ports:
    - port: 80
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: passit
  name: allow-passit-to-traefik
spec:
  podSelector:
    matchLabels:
      app: passit
      component: passit
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: traefik
      podSelector:
        matchLabels:
          app: traefik

    ports:
    - protocol: TCP
      port: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: passit
  name: passit
spec:
  selector:
    matchLabels:
      app: passit
      component: passit
  template:
    metadata:
      labels:
        app: passit
        component: passit
    spec:
      containers:
        - name: passit
          image: passit/passit:stable
          imagePullPolicy: Always
          ports:
            - name: passit
              containerPort: 8080
          readinessProbe:
            timeoutSeconds: 3
            initialDelaySeconds: 3
            httpGet:
              path: "/api/ping/"
              port: 8080
          livenessProbe:
            timeoutSeconds: 3
            initialDelaySeconds: 30
            httpGet:
              path: "/api/ping/"
              port: 8080

      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
               app: passit
               component: postgresql
            topologyKey: "kubernetes.io/hostname"
